log
Wed 15 May 2024 10:41:23 PM UTC: 
 tests:  0|5
total_score: 0/70
15c19b0
Wed 15 May 2024 10:46:03 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:25: error: implicit declaration of function ‘addToList’ [-Werror=implicit-function-declaration]
   61 |                         addToList(list, newNode);
      |                         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8e596d5
Wed 15 May 2024 10:47:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4f71be5
Wed 15 May 2024 10:52:03 PM UTC: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
18a9281
Wed 15 May 2024 10:53:03 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
59290ae
Wed 15 May 2024 10:53:17 PM UTC: 
 sudoku.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  6|2
total_score: 45/70
811275c
Wed 15 May 2024 10:59:47 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|2
total_score: 45/70
2b874ff
Thu 16 May 2024 02:30:27 AM UTC: 
 sudoku.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  7|1
total_score: 55/70
c346206
Thu 16 May 2024 02:41:52 AM UTC: 
 sudoku.c | 19 +++++++++----------
 1 file changed, 9 insertions(+), 10 deletions(-)
 tests:  7|1
total_score: 55/70
5d81661
